--- a/dday.html
+++ b/dday.html
@@ -103,7 +103,7 @@ body{
 </body>
 <script>
     const year = new Date().getFullYear();
-    const myDate = new Date('Apr 18, 2024 00:00:00');
+    const myDate = new Date('Agu 08, 2024 00:00:00');
     console.log(myDate);
     
     // countdown
